[gd_scene load_steps=7 format=2]

[ext_resource path="res://source/resources/map/training_grounds.tres" type="TileSet" id=1]
[ext_resource path="res://source/game/world/battle/status_display/status_display.tscn" type="PackedScene" id=2]
[ext_resource path="res://source/game/world/battle/narrative.gd" type="Script" id=3]
[ext_resource path="res://source/game/world/battle/battle_mode.gd" type="Script" id=4]
[ext_resource path="res://source/game/world/battle/option_ui.gd" type="Script" id=5]
[ext_resource path="res://source/game/world/battle/battle_ui.gd" type="Script" id=6]

[node name="BattleMode" type="Node"]
script = ExtResource( 4 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 320, 224 )
format = 1
tile_data = PoolIntArray( 0, 0, 0 )

[node name="Spectators" type="YSort" parent="."]

[node name="SpecPos1" type="Position2D" parent="Spectators"]
position = Vector2( 160, 63 )

[node name="SpecPos2" type="Position2D" parent="Spectators"]
position = Vector2( 144, 60 )

[node name="SpecPos3" type="Position2D" parent="Spectators"]
position = Vector2( 176, 60 )

[node name="SpecPos4" type="Position2D" parent="Spectators"]
position = Vector2( 128, 62 )

[node name="SpecPos5" type="Position2D" parent="Spectators"]
position = Vector2( 192, 62 )

[node name="SpecPos6" type="Position2D" parent="Spectators"]
position = Vector2( 112, 56 )

[node name="SpecPos7" type="Position2D" parent="Spectators"]
position = Vector2( 208, 56 )

[node name="Opponents" type="YSort" parent="."]

[node name="FoePos1" type="Position2D" parent="Opponents"]
position = Vector2( 80, 112 )

[node name="FoePos2" type="Position2D" parent="Opponents"]
position = Vector2( 90, 144 )

[node name="FoePos3" type="Position2D" parent="Opponents"]
position = Vector2( 70, 176 )

[node name="Allies" type="YSort" parent="."]

[node name="AllyPos1" type="Position2D" parent="Allies"]
position = Vector2( 240, 112 )

[node name="AllyPos2" type="Position2D" parent="Allies"]
position = Vector2( 230, 144 )

[node name="AllyPos3" type="Position2D" parent="Allies"]
position = Vector2( 250, 176 )

[node name="BattleUI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 20.0
margin_right = -10.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftContainer" type="CenterContainer" parent="BattleUI"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftStatusDisplay" parent="BattleUI/LeftContainer" instance=ExtResource( 2 )]
margin_left = 20.0
margin_top = 20.0
margin_right = 20.0
margin_bottom = 20.0

[node name="RightContainer" type="CenterContainer" parent="BattleUI"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -40.0
margin_bottom = 40.0
grow_horizontal = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RightStatusDisplay" parent="BattleUI/RightContainer" instance=ExtResource( 2 )]
margin_left = 20.0
margin_top = 20.0
margin_right = 20.0
margin_bottom = 20.0

[node name="NarrativeDisplay" type="CenterContainer" parent="BattleUI"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 128.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NarrativeBackground" type="Panel" parent="BattleUI/NarrativeDisplay"]
margin_left = 86.0
margin_top = 6.0
margin_right = 214.0
margin_bottom = 70.0
rect_min_size = Vector2( 128, 64 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NarrativeTextContainer" type="CenterContainer" parent="BattleUI/NarrativeDisplay/NarrativeBackground"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -56.0
margin_top = -28.0
margin_right = 56.0
margin_bottom = 28.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Narrative" type="RichTextLabel" parent="BattleUI/NarrativeDisplay/NarrativeBackground/NarrativeTextContainer"]
margin_right = 112.0
margin_bottom = 56.0
rect_min_size = Vector2( 112, 56 )
text = "The opponents are not devoted to the battle!"
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionUI" type="VBoxContainer" parent="BattleUI"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -64.0
margin_top = -32.0
margin_bottom = 32.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AllyLabel" type="Label" parent="BattleUI/OptionUI"]
margin_right = 64.0
margin_bottom = 13.0

[node name="BattleMusic" type="AudioStreamPlayer" parent="."]
autoplay = true
bus = "Bgm"
